--- a/themes/professional/style.css
+++ b/themes/professional/style.css
@@ -23,7 +23,7 @@
     width: auto;
     text-align: left;
     font-family: 'Courier New';
-    font-size: 0.6rem;
+    font-size: 0.8rem;
     font-weight: 700;
     letter-spacing: 0.02em;
     color: #e0e0e0;
@@ -32,11 +32,12 @@
     display: block;
     opacity: 1;
     visibility: visible;
+    text-transform: uppercase;
 }
 
 .card-description {
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 85%;
